wip: Port to Minecraft 1.21